# Similarity

./: Makefile  similarity.cpp
win/: CMakeLists.txt  README.md
win/Similarity/: Similarity.cpp
